objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>ARTT_Paid_Date_Cash__c</fullName>
        <label>ARTT Paid Date (Cash)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARTT_Paid_Date_Time_Off__c</fullName>
        <label>ARTT Paid Date (Time Off)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official_Name__c</fullName>
        <formula>Authorizing_Official__r.FirstName + " " + Authorizing_Official__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorizing Official Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official_OLD__c</fullName>
        <description>Individual responsible for approving any award over threshold. This should be the Requesting Official's supervisor.</description>
        <formula>HYPERLINK('/' + Owner_Contact__r.Supervisor__c , Owner_Contact__r.Supervisor__r.FirstName + ' ' +  Owner_Contact__r.Supervisor__r.LastName, "_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorizing Official OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official_Title__c</fullName>
        <description>Authorizing official's title from the record Owner's related Contact record.</description>
        <formula>Owner_Contact__r.Supervisor__r.Title</formula>
        <label>Authorizing Official Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requesting official's supervisor. Responsible for the award's first level of approval.</description>
        <label>Authorizing Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards_Authorizing_Official</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_Fiscal_Year__c</fullName>
        <description>ARTT FY of the award based on submission date or planned date if the award has not been submitted yet.</description>
        <formula>TEXT(IF(ISBLANK( Submitted_Date__c ),  
CASE( MONTH(Planned_Date__c), 
1, (YEAR(Planned_Date__c)), 
2, (YEAR(Planned_Date__c)), 
3, (YEAR(Planned_Date__c)), 
4, (YEAR(Planned_Date__c)), 
5, (YEAR(Planned_Date__c)), 
6, (YEAR(Planned_Date__c)), 
7, (YEAR(Planned_Date__c)), 
8, (YEAR(Planned_Date__c)), 
9, (YEAR(Planned_Date__c)), 
(YEAR(Planned_Date__c))+1), 
CASE( MONTH(Submitted_Date__c), 
1, (YEAR(Submitted_Date__c)), 
2, (YEAR(Submitted_Date__c)), 
3, (YEAR(Submitted_Date__c)), 
4, (YEAR(Submitted_Date__c)), 
5, (YEAR(Submitted_Date__c)), 
6, (YEAR(Submitted_Date__c)), 
7, (YEAR(Submitted_Date__c)), 
8, (YEAR(Submitted_Date__c)), 
9, (YEAR(Submitted_Date__c)), 
(YEAR(Submitted_Date__c))+1) 
))</formula>
        <label>Award Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <description>Type of award given to employee.</description>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QSI</fullName>
                </value>
                <value>
                    <fullName>Time Off</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Group Award</fullName>
                </value>
                <value>
                    <fullName>On-the-Spot</fullName>
                </value>
                <value>
                    <fullName>Title 42</fullName>
                </value>
                <value>
                    <fullName>STAA Awards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awardee_Direct_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Awardee's Direct Supervisor. Used when a requesting official submits an award for someone outside of his/her organization.</description>
        <label>Awardee Direct Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bargain_Unit_Status_Desc__c</fullName>
        <formula>Emp_Name__r.Bargain_Unit_Status_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bargain Unit Status Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargain_Unit_Status__c</fullName>
        <formula>Emp_Name__r.Bargain_Unit_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bargain Unit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Calculated field based on the 2nd component of the Requesting Official's Department.</description>
        <label>Branch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Budget that the award will be allocated toward.</description>
        <label>Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Document__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Document - Award Budget</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Budgeted_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the award was bulk uploaded to FPPS.</description>
        <label>Bulk Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in flows to bypass validations.</description>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar_Pay_Period_Paid__c</fullName>
        <description>Pay Period in which the Award is Planned to be Paid Out</description>
        <inlineHelpText>Pay Period in which the Award is Planned to be Paid Out</inlineHelpText>
        <label>Calendar Pay Period Paid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>201901</fullName>
                </value>
                <value>
                    <fullName>201902</fullName>
                </value>
                <value>
                    <fullName>201903</fullName>
                </value>
                <value>
                    <fullName>201904</fullName>
                </value>
                <value>
                    <fullName>201905</fullName>
                </value>
                <value>
                    <fullName>201906</fullName>
                </value>
                <value>
                    <fullName>201907</fullName>
                </value>
                <value>
                    <fullName>201908</fullName>
                </value>
                <value>
                    <fullName>201909</fullName>
                </value>
                <value>
                    <fullName>201910</fullName>
                </value>
                <value>
                    <fullName>201911</fullName>
                </value>
                <value>
                    <fullName>201912</fullName>
                </value>
                <value>
                    <fullName>201913</fullName>
                </value>
                <value>
                    <fullName>201914</fullName>
                </value>
                <value>
                    <fullName>201915</fullName>
                </value>
                <value>
                    <fullName>201916</fullName>
                </value>
                <value>
                    <fullName>201917</fullName>
                </value>
                <value>
                    <fullName>201918</fullName>
                </value>
                <value>
                    <fullName>201919</fullName>
                </value>
                <value>
                    <fullName>201920</fullName>
                </value>
                <value>
                    <fullName>201921</fullName>
                </value>
                <value>
                    <fullName>201922</fullName>
                </value>
                <value>
                    <fullName>201923</fullName>
                </value>
                <value>
                    <fullName>201924</fullName>
                </value>
                <value>
                    <fullName>201925</fullName>
                </value>
                <value>
                    <fullName>201926</fullName>
                </value>
                <value>
                    <fullName>201927</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of award given to employee (monetary awards only).</description>
        <inlineHelpText>Cash Awards over $2,000 require AO approval. Collective awards over $5,000 for an awardee require two levels of approval.</inlineHelpText>
        <label>Cash Award Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Award_Counter__c</fullName>
        <description>Set by code. Sequential count of Cash award for an Awardee.</description>
        <inlineHelpText>Counts the number of cash awards for an awardee in a fiscal year. The count disregards awards manually entered into FPPS. Please reference this field when deciding if the award should be included in the bulk upload.</inlineHelpText>
        <label>Cash Award Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cincinnati_Office_Justification__c</fullName>
        <description>Required for Cincinnati Union Employees. Justification specific to the Cinc. Union form.</description>
        <inlineHelpText>Required for Awardees in the Cinc. Union. Press and hold the Ctrl key to select multiple options.</inlineHelpText>
        <label>Cincinnati Office Justification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Substantially surpasses performance goals</fullName>
                </value>
                <value>
                    <fullName>Improved performance over the prior period</fullName>
                </value>
                <value>
                    <fullName>Reduced costs, expert performance, increased efficiencies</fullName>
                </value>
                <value>
                    <fullName>Makes significant contributions to the EPA</fullName>
                </value>
                <value>
                    <fullName>Exemplifies core values of the EPA</fullName>
                </value>
                <value>
                    <fullName>Achieves Specific Scientific Advancements</fullName>
                </value>
                <value>
                    <fullName>Prepares outstanding publications</fullName>
                </value>
                <value>
                    <fullName>Improves service to the public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center_Work_Code__c</fullName>
        <description>Work Code/Cost Center/Cost Structure for which the award will be charged against.</description>
        <label>Cost Center/Work Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Bulk_Uploaded__c</fullName>
        <description>Set by process builder</description>
        <inlineHelpText>Date the award was marked as being bulk uploaded.</inlineHelpText>
        <label>Date Bulk Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Entered_into_FPPS__c</fullName>
        <description>Set by process builder.</description>
        <inlineHelpText>Date the award was entered into FPPS.</inlineHelpText>
        <label>Date Entered into FPPS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Funded__c</fullName>
        <label>Date Funded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Funding_Added__c</fullName>
        <description>Date when a work code is assigned to an award, meaning that it has funding.</description>
        <label>Date Funding Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <description>Date that the pay period was entered on a record.</description>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ready_for_Bulk_Upload__c</fullName>
        <description>Set by process builder.</description>
        <inlineHelpText>Date the award was marked as ready for the bulk upload to FPPS.</inlineHelpText>
        <label>Date Ready for Bulk Upload</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ready_for_FPPS__c</fullName>
        <description>Date that the award was marked as Ready for Shared Service Center</description>
        <inlineHelpText>Date that the award was marked as Ready for Shared Service Center</inlineHelpText>
        <label>Date Ready for FPPS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_SSC__c</fullName>
        <description>Date the record was sent to the SSC.</description>
        <label>Date to SSC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_Org__c</fullName>
        <description>Populated if the awardee is on detail. The field will reflect the organization in which the awardee is serving a detail.</description>
        <inlineHelpText>Please enter or edit if the awardee is on detail.</inlineHelpText>
        <label>Detail Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>The third component of the Requesting Officials department.</description>
        <label>Division</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_ID__c</fullName>
        <description>Awardee's Employee ID</description>
        <formula>Emp_Name__r.Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Awardee's Name</description>
        <label>Emp Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards (Emp Name)</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entered_into_FPPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the award is manually entered into FPPS and not included in the bulk upload.</description>
        <inlineHelpText>Check this box if the award is manually entered into FPPS and not included in the bulk upload.</inlineHelpText>
        <label>Entered into FPPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extent_of_Contribution__c</fullName>
        <description>Extent of Contribution as defined on EPA's recommendation for incentive award form.</description>
        <label>Extent of Contribution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Broad</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPPS_Number_Time_Off__c</fullName>
        <description>Federal Personnel and Payroll System number. Used to track the award once it is processed in FPPS.</description>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL!</inlineHelpText>
        <label>FPPS # (Time Off Award)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPPS_Number__c</fullName>
        <description>Federal Personnel and Payroll System number. Used to track the award once it is processed in FPPS.</description>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL!</inlineHelpText>
        <label>FPPS #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Grade of the Awardee.</description>
        <formula>Emp_Name__r.Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Award_Name_OLD__c</fullName>
        <label>Group Award Name OLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Group Award object to determine which awards are part of a group award. The individual awards, though, are processed as normal.</description>
        <inlineHelpText>Create Group Award Names or leverage existing names in order to tag and organize group awards.</inlineHelpText>
        <label>Group Award Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Group_Award__c.CreatedBy.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <infoMessage>Please choose a group award that you have created.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Group_Award__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HR personnel responsible for carrying out post approval functions.</description>
        <label>HR Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award_HR_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Reviewed_Date__c</fullName>
        <label>HR Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used for TO and QSI awards that don't require union review.</description>
        <inlineHelpText>Check the box once the Analyst has reviewed the award and it is ready for the SSC.</inlineHelpText>
        <label>HR Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IOAA_Approval_Date__c</fullName>
        <description>Date IOAA representative approves the award, if necessary.</description>
        <inlineHelpText>Approval date will be left blank if IOAA approval is not needed.</inlineHelpText>
        <label>IOAA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IOAA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The designated person with IOAA who would need to approve the award request, if necessary.</description>
        <inlineHelpText>Approver for awards that are over $5,000 or take the awardee over a total of $5,000 for cash awards within the fiscal year.</inlineHelpText>
        <label>IOAA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IOAA_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_in_Bulk_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box indicating if the award should be included in the bulk upload.</description>
        <inlineHelpText>Check this box if the award should be included in the bulk upload. Only the first or second cash or time off award can be included in the bulk upload for an individual awardee.</inlineHelpText>
        <label>Include in Bulk Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incoming_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate reference records that are not part of the workflow, but used for validation calculations.</description>
        <inlineHelpText>Indicates an award that's only used for validation purposes.</inlineHelpText>
        <label>Incoming Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_Matrix__c</fullName>
        <formula>HYPERLINK("https://usepa.sharepoint.com/:b:/r/sites/ORD/OARS/RA/Admin/Awards%20Documents/Justification%20Matrix.pdf?csf=1&amp;e=qLZtGM ", "Justification Matrix")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Justification Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO__c</fullName>
        <label>LCO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_HRD_Email_Notification__c</fullName>
        <defaultValue>"ORD-ARTT@epa.gov"</defaultValue>
        <description>Email used to notify HRD when an award was submitted.</description>
        <label>ORD HRD Email Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OTS_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Cash Award Amount will automatically be calculated based on the OTS Amount entered.</inlineHelpText>
        <label>OTS Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTS_Calculator__c</fullName>
        <formula>HYPERLINK("https://usepa.sharepoint.com/:x:/r/sites/ORD/OARS/RA/Admin/Awards%20Documents/OTS_Calculator_2017.xlsx?d=w9f3c9e253ce24679bab497445cb28b0a&amp;csf=1&amp;e=Bb0aNM", "OTS Calculator on Sharepoint")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTS Calculator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupational_Series__c</fullName>
        <formula>Emp_Name__r.Occ_Series__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupational Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_LCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an award is for an individual outside that is outside of the Requesting Official's organization.</description>
        <inlineHelpText>Please check if the award is going towards an individual outside of your organization.</inlineHelpText>
        <label>Outside LCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_ORD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the award is going to an individual outside of the RPIO.</description>
        <inlineHelpText>Please check if the Awardee is outside of ORD. If you do not check this field for non-ORD employees, the award will be at risk of not being processed.</inlineHelpText>
        <label>Outside ORD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_Org__c</fullName>
        <description>Evaluates to true if the requesting Official is not the Awardee's Direct Supervisor</description>
        <formula>Requesting_Official__r.Employee_Number__c &lt;&gt;  Awardee_Direct_Supervisor__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if the Requesting Official is not the Awardee's Direct Supervisor</inlineHelpText>
        <label>Outside Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact record related the owner's user record.</description>
        <label>Owner Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The Contact's related User Id does not match the Owner's User Id.</errorMessage>
            <filterItems>
                <field>Contact.User__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards (Owner Contact)</relationshipLabel>
        <relationshipName>Owned_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Dept__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <description>The actual amount paid to the employee after taxes, etc., have been taken out.</description>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <description>The pay period in which the employee was paid.</description>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL! Please use for Cash and QSIs.</inlineHelpText>
        <label>Calendar Pay Period (Cash)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>201722</fullName>
                </value>
                <value>
                    <fullName>201723</fullName>
                </value>
                <value>
                    <fullName>201724</fullName>
                </value>
                <value>
                    <fullName>201725</fullName>
                </value>
                <value>
                    <fullName>201726</fullName>
                </value>
                <value>
                    <fullName>201801</fullName>
                </value>
                <value>
                    <fullName>201802</fullName>
                </value>
                <value>
                    <fullName>201803</fullName>
                </value>
                <value>
                    <fullName>201804</fullName>
                </value>
                <value>
                    <fullName>201805</fullName>
                </value>
                <value>
                    <fullName>201806</fullName>
                </value>
                <value>
                    <fullName>201807</fullName>
                </value>
                <value>
                    <fullName>201808</fullName>
                </value>
                <value>
                    <fullName>201809</fullName>
                </value>
                <value>
                    <fullName>201810</fullName>
                </value>
                <value>
                    <fullName>201811</fullName>
                </value>
                <value>
                    <fullName>201812</fullName>
                </value>
                <value>
                    <fullName>201813</fullName>
                </value>
                <value>
                    <fullName>201814</fullName>
                </value>
                <value>
                    <fullName>201815</fullName>
                </value>
                <value>
                    <fullName>201816</fullName>
                </value>
                <value>
                    <fullName>201817</fullName>
                </value>
                <value>
                    <fullName>201818</fullName>
                </value>
                <value>
                    <fullName>201819</fullName>
                </value>
                <value>
                    <fullName>201820</fullName>
                </value>
                <value>
                    <fullName>201821</fullName>
                </value>
                <value>
                    <fullName>201822</fullName>
                </value>
                <value>
                    <fullName>201823</fullName>
                </value>
                <value>
                    <fullName>201824</fullName>
                </value>
                <value>
                    <fullName>201825</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <formula>Emp_Name__r.Pay_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payroll personnel responsible for performing payroll-related functions for the award.</description>
        <label>Payroll Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards_Payroll_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <formula>Emp_Name__r.Position_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RO_HR_Code__c</fullName>
        <description>Requesting Official's HR organization code.</description>
        <formula>RO_HR_Org2__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO HR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_HR_Org2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Requesting officials HR Org at the time the award was created. If the requesting official was on detail, then the official's detail org will be listed.</description>
        <label>RO HR Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards (RO HR Org)</relationshipLabel>
        <relationshipName>Awards_HR_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RO_HR_Org__c</fullName>
        <description>Requesting Official's HR organization name.</description>
        <formula>IF(ISBLANK(  Requesting_Official__r.Detail_Org__c ),   Requesting_Official__r.Account.Name,  Requesting_Official__r.Detail_Org__r.Name )</formula>
        <label>RO HR Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for awards that will not be processed, but used for validation purposes.</description>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requesting_Official_Supervisor_Title__c</fullName>
        <formula>Requesting_Official__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Official Supervisor Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Official_Supervisor__c</fullName>
        <formula>Requesting_Official__r.FirstName  + " " +  Requesting_Official__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Official Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Official__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Requesting Official Contact Lookup</description>
        <inlineHelpText>Requesting Official. The individual submitting the award. Please note, the budget is assigned based on the RO's organization.</inlineHelpText>
        <label>Requesting Official</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards (Contact)</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>